Moved package com.dropchop.recyclone.model.api => com.dropchop.recyclone.base.api.model Cleaned-up 200+ warnings. https://github.com/dropchop-com/recyclone/issues/22